--- a/index.html
+++ b/index.html
@@ -5,41 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="font" href="https://fonts.google.com/specimen/Overpass">
+  <link rel="stylesheet" href="rtc.css">
   
   <title>Frontend Mentor | Interactive rating component</title>
+  <script src="rtc.js">$('#number').trigger('click');</script>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
+   <section>
+     <div class="box">
+       <img class="star" src="D:/rating-component-js/images/icon-star.svg" alt="star">
+       <h1>How did we do?</h1>
+       <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+       <button class="number">1</button>
+       <button class="number">2</button>
+       <button class="number">3</button>
+       <button class="number">4</button>
+       <button class="number">5</button>
+       <div>
+         <input type="submit" onClick="myFunction()" value="SUBMIT" class="submit"/>
+       </div>
+     </div>
+   </section>
 
   <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
