--- a/thanks.html
+++ b/thanks.html
@@ -15,7 +15,7 @@
  <!-- Thank you state start -->
  <section>
      <div>
-        <img class="thanks" src="D:/rating-component-js/images/illustration-thank-you.svg" alt="thank you">
+        <img class="thanks" src="./images/illustration-thank-you.svg" alt="thank you">
         <article>You selected <!-- Add rating here --> out of 5</article>
         <h1 class="thank">Thank you!</h1>
         <p class="thanp">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
