--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="rtc.css">
   
   <title>Frontend Mentor | Interactive rating component</title>
-  <script src="rtc.js">$('#number').trigger('click');</script>
+  <script src="rtc.js">$('number').trigger('click');</script>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
   <!-- Rating state start -->
    <section>
      <div class="box">
-       <img class="star" src="D:/rating-component-js/images/icon-star.svg" alt="star">
+       <img class="star" src="./images/icon-star.svg" alt="star">
        <h1>How did we do?</h1>
        <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
        <button class="number">1</button>
